--- a/gb/20/3/13/n11939189.md
+++ b/gb/20/3/13/n11939189.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dbwccs309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dbwccs309/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dbwccs309/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dbwccs309/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dbwccs309/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dbwccs309/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dbwccs309/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dbwccs309/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onivku3167/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onivku3167/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onivku3167/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情3.14】川普：考虑限制国内旅行</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PW2VR-600x400.jpg" />
 <h6>周六（3月14日）中午，美国总统川普（特朗普）和副总统彭斯在白宫召开关于中共肺炎美国疫情的新闻发布会。(Photo by JIM WATSON / AFP)
@@ -21,15 +21,15 @@
 </strong><strong>印尼运输部长和意大利卫生副部长染疫</strong><br />
 <strong>美众议院通过新冠状病毒援助法案</strong><br />
 <strong>疫区孝感一幼儿饿死家中 尸体已发臭</strong></p>
-<h2>以下是<ahref="https://github.com/dbwccs309/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
-<h3>川普未感染<ahref="https://github.com/dbwccs309/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a></h3>
+<h2>以下是<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>川普未感染<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a></h3>
 <p>川普新冠病毒检测结果为阴性反应。</p>
 <h3>美国维吉尼亚州及路易斯安那州现首例武汉肺炎死者</h3>
 <p>维吉尼亚州政府周六表示该州首例武汉肺炎患者死亡，死者是70多岁男性，死于呼吸衰竭。</p>
 <p>路易斯安那州州长约翰·贝德·爱德华兹（John Bel Edwards）周六发布新闻稿说，该州出现首例武汉肺炎死亡病例，死者是一名58岁居住在奥尔良教区的居民，有潜在的病史。</p>
 <p>CNN新闻说，根据美国各州和地方卫生机构以及CDC的统计，截至14号，全美至少2,655确诊病例，56人死亡。</p>
 <h3>彭斯请白宫工作人员遵守防疫准则</h3>
-<p>CNN看到一份文件显示，美国副总统彭斯在一封信中敦促白宫行政办公室（Executive Office ）工作人员遵循准则，以降低<ahref="https://github.com/dbwccs309/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的传播。</p>
+<p>CNN看到一份文件显示，美国副总统彭斯在一封信中敦促白宫行政办公室（Executive Office ）工作人员遵循准则，以降低<ahref="https://github.com/onivku3167/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的传播。</p>
 <p>彭斯在信中写道：“我们每个人都必须采取适当的预防措施，以确保自己和同事的安全。身为白宫综合大楼的一名员工，我们有责任保护我们行政部门和其他与我们共事的人的健康。”</p>
 <p>彭斯还在信中建议员工：洗手20秒、社交疏离或尽量少参加大型的面对面聚会、避免身体接触、清洁个人工作环境、生病时待在家里。</p>
 <h3>英国首相请相关厂商增加医疗设备产量</h3>
@@ -46,7 +46,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><img width="600" src="https://raw.githubusercontent.com/dbwccs309/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/dbwccs309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
+<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><img width="600" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
 <p>— NBA (@NBA) <ahref="https://twitter.com/NBA/status/1238886687444471810?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -75,7 +75,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><img width="600" src="https://raw.githubusercontent.com/dbwccs309/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/dbwccs309/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
+<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><img width="600" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/twitter.jpg" ><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
 <p>— Stephen Phelan (@hyperphelan) <ahref="https://twitter.com/hyperphelan/status/1238934238453534720?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -150,7 +150,7 @@
 <h3>湖北湖南两家10口 命殒福建隔离酒店</h3>
 <p>3月7日，作为武汉肺炎隔离点的泉州欣佳酒店坍塌，事故造成29人遇难。遇难的包括来自湖南和湖北的两个家庭。他们都是一家五口，一对年轻夫妻带着三个孩子，最小孩子也都仅有2岁。</p>
 <p>该酒店主要用于集中隔离观察从湖北、温州等重点疫区来的人员，隔离人员并非疑似病例。事发时，该酒店共入住重点疫区或有相关旅居史58人，这些人的核酸检测均为阴性。</p>
-<p>全文请看<ahref=><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/3/14/n11940419.md#1">湖北湖南两家10口 命殒福建隔离酒店</a></p>
+<p>全文请看<ahref=><a href="https://github.com/onivku3167/djy/blob/master/gb/20/3/14/n11940419.md#1">湖北湖南两家10口 命殒福建隔离酒店</a></p>
 <h3>川普：我们正利用联邦政府全部力量来击败病毒</h3>
 <p>在周六的新闻发布会上，川普总统对致力于解决新冠状病毒大流行的所有人民和组织表示感谢。</p>
 <p>川普说：“我要感谢我背后的人们和回到各个办公室人们所做的辛勤工作。” “我们正在利用联邦政府的全部力量来抵制该病毒，这就是我们一直在做的事情。上周，我们从国会获得了用于新冠状病毒的最初83亿美元，且是迅速和有效完成（拨款），我想感谢所有国会议员。”</p>
@@ -441,49 +441,49 @@
 <h3>巴西总统律师染疫</h3>
 <p>最近与巴西总统贾尔?博尔索纳罗（Jair Bolsonaro）一起旅行的律师卡琳娜?库法（Karina Kufa）周五晚上发推文说，她的新型冠状病毒检测呈阳性反应。</p>
 <p>她说，目前感觉很好，只需要休息几天即可再次参加战斗！</p>
-<p><ahref=><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】请看这里</a></p>
+<p><ahref=><a href="https://github.com/onivku3167/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】请看这里</a></p>
 <p>责任编辑：叶紫微 #</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/3/10/n11928415.md#1">【最新疫情3.10】川普政府拟免薪酬税</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/3/10/n11931046.md#1">【最新疫情3.11】世卫宣布疫情为大流行</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/3/11/n11933628.md#1">【最新疫情3.12】德国疫情升级 日增802例</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/10/n12394661.md#1">大爆炸1个月后 贝鲁特港再爆大火 浓烟滚滚</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/3/10/n11928415.md#1">【最新疫情3.10】川普政府拟免薪酬税</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/3/10/n11931046.md#1">【最新疫情3.11】世卫宣布疫情为大流行</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/3/11/n11933628.md#1">【最新疫情3.12】德国疫情升级 日增802例</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630739.md#1">替中共监视视频会议 Zoom中国雇员被诉</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/dbwccs309/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/onivku3167/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2442949.md#1" target="_blank">【纪元特稿】中共打压 反助法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/9/n12392730.md#1">【纽约调查】《美国四百年》《审判毛泽东》新书发表</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/9/n12392242.md#1">【时事纵横】美批港府严酷 华为禁令韩企出手</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/10/n12393353.md#1">【西岸观察】美国总统 谁配拿诺贝尔和平奖</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/7/n12387230.md#1">【新闻看点】中共外交频出洋相 习扩大开放被讽</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12389565.md#1">疫情未退 习近平为何急开防疫表彰会？</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12389845.md#1">是罪人而非功臣？钟南山等人受勋引热议</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/9/n12391838.md#1">为家人挺过第18次化疗 余苑绮：最想回家</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12389885.md#1">32岁继女近照曝光 林青霞曾获赞世上最好继母</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/7/n12387235.md#1">林志玲丈夫AKIRA 顺利取得台湾居留证</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12389717.md#1">阿娇厦门动第二次手术 头部表面一层缝66针</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12390081.md#1">改编《木兰诗》讽撑警主角 视网膜获赞太有才</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/9/n12390935.md#1">定力考验：哈士奇和黄金猎犬谁会偷吃烤鸡？</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/9/n12391179.md#1">中共若入侵台湾 美军空投水雷可阻止？</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12388589.md#1">印度农民以半英亩土地种农作物养野鸟</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12388298.md#1">美军“末日飞机”不怕核爆 它有何特点？</a></li>
-<li><a href="https://github.com/dbwccs309/djy/blob/master/gb/20/9/8/n12389252.md#1">古中医“五藏六府”与现代“五脏六腑”之别处</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/11/27/n12580489.md#1">太学生不识朱元璋 吟诗一首登仕途</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623326.md#1">【罗厨寻味】红烧牛腩</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629475.md#1">【直播】亚利桑那马县就选举诉讼举行会议</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630320.md#1">【新闻大家谈】巨兽握免死牌？川普誓反击</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623396.md#1">【新闻看点】拜登当选？川普意想不到“反转”</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623847.md#1">【新闻大家谈】美国会首次听证 贺锦丽尴尬</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624296.md#1">店员妹仔破涕为笑 误开400万的发票找到了</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/15/n12623272.md#1">曾遭散打冠军老婆家暴 陆男星台上演哭章子怡</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12623537.md#1">疑向中共下跪 梁朝伟漫威角色“满大人”改名</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625572.md#1">遭小粉红无谓攻击 香港歌手关淑怡发长文怒怼</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625818.md#1">疑染疫身亡的李偲嫣 曾任张国荣歌迷会会长</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625338.md#1">《神力女超人1984》影评：一流英雄片</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/7/n12600078.md#1">厕所异味有原因！3个清洁妙方除臭又去污垢</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走恼人飞蚊</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624214.md#1">iPhone 6s手机从飞机坠地没坏 拍下整个过程</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/14/n12619631.md#1">掌握这些技巧 在家也能品尝职人手冲咖啡</a></li>
+<li><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12624416.md#1">311大地震被海啸冲走 日本渔船10年后现身</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dbwccs309/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dbwccs309/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/13/n11939189.htm">【最新疫情3.14】川普：考虑限制国内旅行</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onivku3167/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/13/n11939189.htm">【最新疫情3.14】川普：考虑限制国内旅行</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/dbwccs309/djy/blob/master/gb/20/3/13/n11939189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dbwccs309/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dbwccs309/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dbwccs309/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dbwccs309/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dbwccs309/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/onivku3167/djy/blob/master/gb/20/3/13/n11939189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onivku3167/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onivku3167/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onivku3167/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
