--- a/gb/20/3/13/n11939189.md
+++ b/gb/20/3/13/n11939189.md
@@ -457,7 +457,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/onivku3167/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/onivku3167/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
